# SalientPosesMaya

./: CMakeLists.txt  README.md
src/: AnalysisNode.cpp  AnalysisNode.h  CMakeLists.txt  common.cpp  common.h  pluginMain.cpp
